# corprag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
corprag_storage/artifacts/local/Context-Aware Multimodal Pipeline in RAG-Anything_b263b937/Context-Aware Multimodal Pipeline in RAG-Anything/auto/: Context-Aware Multimodal Pipeline in RAG-Anything.md
corprag_storage/artifacts/local/IMG_9551_3cf02006/IMG_9551/ocr/: IMG_9551.md  IMG_9551_content_list.json  IMG_9551_middle.json  IMG_9551_model.json
corprag_storage/artifacts/local/Project-Management-Sample-Data_4_680ae27a/Project-Management-Sample-Data_4/auto/: Project-Management-Sample-Data_4_content_list.json  Project-Management-Sample-Data_4_middle.json  Project-Management-Sample-Data_4_model.json
corprag_storage/artifacts/local/Project-Management-Sample-Data_d471c901/Project-Management-Sample-Data/auto/: Project-Management-Sample-Data.md
corprag_storage/artifacts/local/PyCaret 3.0 cheat_sheet_3a0b2a60/PyCaret 3.0 cheat_sheet/auto/: PyCaret 3.0 cheat_sheet.md  PyCaret 3.0 cheat_sheet_content_list.json  PyCaret 3.0 cheat_sheet_middle.json  PyCaret 3.0 cheat_sheet_model.json
docs/plans/: 2026-03-04-content-aware-dedup-design.md  2026-03-04-content-aware-dedup-plan.md  2026-03-05-backend-agnostic-reset-plan.md  2026-03-05-eliminate-sources-plan.md  2026-03-05-service-architecture-refactor-design.md  2026-03-05-service-architecture-refactor-plan.md  2026-03-05-test-cleanup-and-supplement-plan.md  2026-03-05-unified-hash-index-design.md  2026-03-05-unified-hash-index-plan.md
postgres/: Dockerfile  init.sql
scripts/: README.md  cli.py  reset.py
src/corprag/: __init__.py  config.py  pool.py  service.py
src/corprag/api/: server.py
src/corprag/converters/: __init__.py  office.py
src/corprag/ingestion/: __init__.py  cleanup.py  hash_index.py  pipeline.py
src/corprag/mcp/: __init__.py  server.py
src/corprag/models/: __init__.py  llm.py  schemas.py
src/corprag/retrieval/: __init__.py  engine.py
src/corprag/sourcing/: __init__.py  azure_blob.py  base.py  local.py  snowflake.py
src/corprag/utils/: content_filters.py
src/dlightrag/: __init__.py  config.py  service.py
src/dlightrag/api/: __init__.py  server.py
src/dlightrag/converters/: office.py
src/dlightrag/core/: federation.py  service.py  servicemanager.py
src/dlightrag/core/ingestion/: cleanup.py  hash_index.py  pipeline.py
src/dlightrag/core/retrieval/: engine.py
src/dlightrag/ingestion/: __init__.py  cleanup.py  hash_index.py  page_metadata.py  pipeline.py  policy.py
src/dlightrag/mcp/: server.py
src/dlightrag/models/: __init__.py  llm.py  prompts.py  schemas.py
src/dlightrag/retrieval/: engine.py  federation.py
src/dlightrag/sourcing/: __init__.py  azure_blob.py  base.py  local.py  snowflake.py
src/dlightrag/storage/: pg_jsonb_kv.py
src/dlightrag/unifiedrepresent/: embedder.py  engine.py  extractor.py  prompts.py  retriever.py
src/dlightrag/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_ingest_query_e2e.py  test_pg_storage.py  test_service_composition.py
tests/unit/: conftest.py  test_api_server.py  test_cleanup.py  test_cli.py  test_config.py  test_content_filters.py  test_entity_extractor.py  test_federation.py  test_hash_index.py  test_ingestion_policy.py  test_llm_providers.py  test_office_converter.py  test_page_metadata.py  test_pg_jsonb_kv.py  test_pipeline.py  test_pool.py  test_renderer.py  test_retrieval_engine.py  test_schemas.py  test_service.py  test_servicemanager.py  test_unified_engine.py  test_visual_embedder.py  test_visual_retriever.py
